almost fully functional, bets posting but not dispatching  properly though

--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -1,6 +1,7 @@
 
 
 $brand-colour: #DB0D17;
+$contrast-colour: #088980;
 $contrast-colour-1: #088980;
 $contrast-colour-2: #DF680D;
 $contrast-colour-3: #1BB70B;
