--- a/app/styles/_generic.scss
+++ b/app/styles/_generic.scss
@@ -12,22 +12,34 @@
   }
 }
 
-
 .btn--request {
-  background-color: $contrast-colour-1;
+  background-color: $contrast-colour;
   @include focus-style {
-    background-color: darken($contrast-colour-1, 10%);
+    background-color: darken($contrast-colour, 10%);
   }
 }
-
-// .btn--cancel {
-//   background-color: $contrast-colour-2;
-// }
-
 
 .btn__group {
   display: flex;
   .btn {
     flex: 1;
+  }
+}
+
+.btn__nav-group {
+  display: flex;
+  background-color: $grey;
+  justify-content: flex-end;
+  width: 100%;
+}
+
+.text-input {
+  background-color: transparent;
+  border-bottom: 1px solid currentColor;
+  box-shadow: 0;
+  outline: 0;
+  padding: .25rem;
+  @include focus-style {
+    color: $brand-colour;
   }
 }
