--- a/app/styles/_generic.scss
+++ b/app/styles/_generic.scss
@@ -27,10 +27,24 @@
 }
 
 .btn__nav-group {
+  align-items: center;
   display: flex;
-  background-color: $grey;
+  background-color: $darkgrey;
   justify-content: flex-end;
+  position: relative;
   width: 100%;
+}
+
+.btn__nav-group__branding {
+  display: flex;
+  align-items: center;
+  margin-right: auto;
+  padding: 0 1rem;
+  .logo {
+    fill: $brand-colour;
+    opacity: .9;
+    max-width: 4rem;
+  }
 }
 
 .text-input {
@@ -42,4 +56,31 @@
   @include focus-style {
     color: $brand-colour;
   }
+}
+
+/**
+ * Generic animation class to be applied to buttons *etc*, indicating
+ * action available/needed.
+ */
+.pulse {
+  position: relative;
+}
+.pulse::after {
+  background-color: transparent;
+  background-image: radial-gradient(ellipse at center, rgba($white, .5), rgba($white, 0));
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  mix-blend-mode: overlay;
+  animation: 2s linear 0s infinite alternate pulse;
+  z-index: 10;
+}
+
+@keyframes pulse {
+  0%   { opacity: 0; }
+  50%  { opacity: 1; }
+  100% { opacity: 0; }
 }
